--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -9,6 +9,12 @@ body {
   h-full
 }
 
+.career {
+  @apply
+  bg-transparent
+  /* bg-[#bcbcbc62] */
+}
+
 .personal-info {
   @apply
   px-3
@@ -16,7 +22,7 @@ body {
   border
   border-slate-400
   shadow-inner
-  shadow-slate-400
+  shadow-slate-200
   outline-none
   outline-offset-0
   focus:border-slate-600
