--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1821,30 +1821,6 @@ html {
   content: attr(data-title);
 }
 
-.carousel {
-  display: flex;
-  overflow-x: scroll;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.carousel-item {
-  box-sizing: content-box;
-  display: flex;
-  flex: none;
-  scroll-snap-align: start;
-}
-
-.carousel-center .carousel-item {
-  scroll-snap-align: center;
-}
-
-.carousel-end .carousel-item {
-  scroll-snap-align: end;
-}
-
 .input {
   flex-shrink: 1;
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
@@ -1940,12 +1916,6 @@ html {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   border-radius: var(--rounded-btn, 0.5rem);
-}
-
-.btm-nav>*:where(.active) {
-  border-top-width: 2px;
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b1) / var(--tw-bg-opacity));
 }
 
 .btn:active:hover,
@@ -2070,10 +2040,6 @@ html {
   }
 }
 
-.carousel::-webkit-scrollbar {
-  display: none;
-}
-
 @-webkit-keyframes checkmark {
   0% {
     background-position-y: 5px;
@@ -2144,14 +2110,6 @@ html {
 .link:focus-visible {
   outline: 2px solid currentColor;
   outline-offset: 2px;
-}
-
-.menu :where(li:not(.menu-title):not(:empty)) > :where(:not(ul).active), 
-  .menu :where(li:not(.menu-title):not(:empty)) > :where(*:not(ul):active) {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--p) / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: hsl(var(--pc) / var(--tw-text-opacity));
 }
 
 .mockup-phone .display {
@@ -2226,14 +2184,6 @@ html {
   100% {
     transform: translateY(0);
   }
-}
-
-.table tr.active th, 
-    .table tr.active td, 
-    .table tr.active:nth-child(even) th, 
-    .table tr.active:nth-child(even) td {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--b3, var(--b2)) / var(--tw-bg-opacity));
 }
 
 .textarea:focus {
@@ -2313,22 +2263,6 @@ html {
   width: 320px;
 }
 
-.btm-nav-xs>*:where(.active) {
-  border-top-width: 1px;
-}
-
-.btm-nav-sm>*:where(.active) {
-  border-top-width: 2px;
-}
-
-.btm-nav-md>*:where(.active) {
-  border-top-width: 2px;
-}
-
-.btm-nav-lg>*:where(.active) {
-  border-top-width: 4px;
-}
-
 .absolute {
   position: absolute;
 }
@@ -2341,30 +2275,6 @@ html {
   top: 5rem;
 }
 
-.right-0 {
-  right: 0px;
-}
-
-.top-full {
-  top: 100%;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
 .z-\[-1\] {
   z-index: -1;
 }
@@ -2375,22 +2285,6 @@ html {
 
 .col-span-12 {
   grid-column: span 12 / span 12;
-}
-
-.col-span-5 {
-  grid-column: span 5 / span 5;
-}
-
-.col-span-7 {
-  grid-column: span 7 / span 7;
-}
-
-.float-left {
-  float: left;
-}
-
-.m-2 {
-  margin: 0.5rem;
 }
 
 .m-10 {
@@ -2409,6 +2303,16 @@ html {
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-4 {
@@ -2435,8 +2339,20 @@ html {
   margin-top: 0px;
 }
 
-.inline-block {
-  display: inline-block;
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.block {
+  display: block;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -2455,8 +2371,16 @@ html {
   height: 100%;
 }
 
-.h-\[70vh\] {
-  height: 70vh;
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.h-\[312px\] {
+  height: 312px;
+}
+
+.h-\[50px\] {
+  height: 50px;
 }
 
 .h-\[50vh\] {
@@ -2489,6 +2413,14 @@ html {
   width: fit-content;
 }
 
+.w-\[312px\] {
+  width: 312px;
+}
+
+.w-auto {
+  width: auto;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -2505,18 +2437,12 @@ html {
   flex-basis: 25%;
 }
 
+.basis-3\/4 {
+  flex-basis: 75%;
+}
+
 .basis-1\/2 {
   flex-basis: 50%;
-}
-
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.translate-y-\[-50\%\] {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-scale-x-100 {
@@ -2536,12 +2462,12 @@ html {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-center {
@@ -2568,40 +2494,24 @@ html {
   gap: 0.5rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
-.rounded-\[3px\] {
-  border-radius: 3px;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.border-8 {
-  border-width: 8px;
+.border-\[16px\] {
+  border-width: 16px;
 }
 
 .border {
   border-width: 1px;
 }
 
+.border-\[1px\] {
+  border-width: 1px;
+}
+
 .border-2 {
   border-width: 2px;
-}
-
-.border-0 {
-  border-width: 0px;
-}
-
-.border-\[16px\] {
-  border-width: 16px;
 }
 
 .border-slate-300 {
@@ -2623,23 +2533,8 @@ html {
   background-color: rgba(200,200,200,.0);
 }
 
-.bg-\[color\:var\(--red\)\] {
-  background-color: var(--red);
-}
-
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-
-.bg-green-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+.bg-\[color\:var\(--gray\)\] {
+  background-color: var(--gray);
 }
 
 .bg-\[url\(assets\/img\/career-bg\.jpg\)\] {
@@ -2662,12 +2557,8 @@ html {
   padding: 1rem;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
-.p-8 {
-  padding: 2rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .py-12 {
@@ -2705,9 +2596,9 @@ html {
   padding-right: 2rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pt-10 {
@@ -2718,16 +2609,12 @@ html {
   padding-right: 2rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .indent-10 {
@@ -2736,14 +2623,6 @@ html {
 
 .font-\[\'Lato\'\] {
   font-family: 'Lato';
-}
-
-.font-\[\'Noto_Sans_Display\'\] {
-  font-family: 'Noto Sans Display';
-}
-
-.font-\[\'Alegreya_Sans\'\] {
-  font-family: 'Alegreya Sans';
 }
 
 .text-6xl {
@@ -2766,6 +2645,20 @@ html {
   line-height: 1.75rem;
 }
 
+.text-\[12vw\] {
+  font-size: 12vw;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -2779,16 +2672,12 @@ html {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
+.font-black {
+  font-weight: 900;
 }
 
 .uppercase {
   text-transform: uppercase;
-}
-
-.leading-\[1\.25\] {
-  line-height: 1.25;
 }
 
 .text-white {
@@ -2821,10 +2710,6 @@ html {
 
 .duration-150 {
   transition-duration: 150ms;
-}
-
-.duration-100 {
-  transition-duration: 100ms;
 }
 
 /* Contact */
@@ -2873,8 +2758,8 @@ body {
 }
 
 .sub-header {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .hover\:bg-white:hover {
@@ -2887,29 +2772,14 @@ body {
   color: hsl(137 98% 26% / var(--tw-text-opacity));
 }
 
-.hover\:text-green-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
-}
+@media (min-width: 640px) {
+  .sm\:h-\[75px\] {
+    height: 75px;
+  }
 
-.hover\:no-underline:hover {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
-.hover\:outline-none:hover {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:no-underline:focus {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
+  .sm\:text-\[9vw\] {
+    font-size: 9vw;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2919,6 +2789,20 @@ body {
 
   .md\:flex-row {
     flex-direction: row;
+  }
+
+  .md\:text-\[8vw\] {
+    font-size: 8vw;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:text-\[7vw\] {
+    font-size: 7vw;
   }
 }
 
