--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2295,6 +2295,10 @@ html {
   margin: auto;
 }
 
+.m-8 {
+  margin: 2rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -2313,6 +2317,15 @@ html {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-4 {
@@ -2545,6 +2558,10 @@ html {
   background-repeat: no-repeat;
 }
 
+.p-14 {
+  padding: 3.5rem;
+}
+
 .p-12 {
   padding: 3rem;
 }
@@ -2555,6 +2572,10 @@ html {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .py-12 {
@@ -2603,6 +2624,10 @@ html {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-center {
@@ -2670,6 +2695,10 @@ html {
 
 .font-black {
   font-weight: 900;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -2743,6 +2772,23 @@ body {
   background-color: transparent;
 }
 
+/*************PARTNERS**************/
+
+.partners-about {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  width: 80%;
+  flex-shrink: 0;
+  justify-content: center;
+  gap: 3rem;
+  --tw-bg-opacity: 1;
+  background-color: hsl(137 98% 26% / var(--tw-bg-opacity));
+  padding: 3rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 /* Partners - AEMM */
 
 .contact,  .about {
@@ -2757,6 +2803,8 @@ body {
   font-size: 1.5rem;
   line-height: 2rem;
 }
+
+/* Partners - ACI */
 
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
@@ -2801,6 +2849,7 @@ body {
     font-size: 7vw;
   }
 }
+
 
 
 
