--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2422,10 +2422,6 @@ html {
   border-top-width: 4px;
 }
 
-.visible {
-  visibility: visible;
-}
-
 .fixed {
   position: fixed;
 }
@@ -2446,6 +2442,10 @@ html {
   top: 5rem;
 }
 
+.top-3\/4 {
+  top: 75%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -2454,12 +2454,8 @@ html {
   bottom: 0px;
 }
 
-.left-full {
-  left: 100%;
-}
-
-.top-1\/2 {
-  top: 50%;
+.left-0 {
+  left: 0px;
 }
 
 .z-\[-1\] {
@@ -2514,8 +2510,8 @@ html {
   margin-bottom: 3rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .ml-4 {
@@ -2538,24 +2534,12 @@ html {
   margin-top: 0px;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
 .ml-1 {
   margin-left: 0.25rem;
 }
 
 .ml-auto {
   margin-left: auto;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .block {
@@ -2598,6 +2582,10 @@ html {
   height: 312px;
 }
 
+.h-1\/4 {
+  height: 25%;
+}
+
 .h-\[75vh\] {
   height: 75vh;
 }
@@ -2606,32 +2594,36 @@ html {
   height: 50px;
 }
 
+.h-\[20vh\] {
+  height: 20vh;
+}
+
 .h-\[60vh\] {
   height: 60vh;
 }
 
-.h-\[30vh\] {
-  height: 30vh;
+.h-\[75\%\] {
+  height: 75%;
 }
 
-.h-\[50vh\] {
-  height: 50vh;
+.min-h-\[200px\] {
+  min-height: 200px;
 }
 
 .w-full {
   width: 100%;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.w-4\/5 {
-  width: 80%;
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-4\/5 {
+  width: 80%;
 }
 
 .w-2\/3 {
@@ -2656,24 +2648,12 @@ html {
   width: auto;
 }
 
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-3\/6 {
+.w-2\/4 {
   width: 50%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .max-w-screen-lg {
@@ -2700,15 +2680,6 @@ html {
   flex-basis: 75%;
 }
 
-.basis-1\/3 {
-  flex-basis: 33.333333%;
-}
-
-.translate-x-\[-50\%\] {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-scale-x-100 {
   --tw-scale-x: -1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2730,10 +2701,6 @@ html {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -2746,10 +2713,6 @@ html {
   align-items: center;
 }
 
-.justify-start {
-  justify-content: flex-start;
-}
-
 .justify-center {
   justify-content: center;
 }
@@ -2758,8 +2721,8 @@ html {
   justify-content: space-around;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
+.gap-8 {
+  gap: 2rem;
 }
 
 .gap-12 {
@@ -2774,16 +2737,8 @@ html {
   gap: 0.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .overflow-x-hidden {
   overflow-x: hidden;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 
 .rounded-md {
@@ -2834,6 +2789,10 @@ html {
   background-color: var(--gray);
 }
 
+.bg-\[color\:var\(--green\)\] {
+  background-color: var(--green);
+}
+
 .bg-\[url\(assets\/img\/engineers\.jpg\)\] {
   background-image: url(assets/img/engineers.jpg);
 }
@@ -2842,12 +2801,42 @@ html {
   background-image: url(assets/img/career-bg.jpg);
 }
 
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-\[\#000000cc\] {
+  --tw-gradient-from: #000000cc;
+  --tw-gradient-to: rgb(0 0 0 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .bg-cover {
   background-size: cover;
 }
 
+.bg-\[length\:auto_300\%\] {
+  background-size: auto 300%;
+}
+
+.bg-\[length\:auto_200\%\] {
+  background-size: auto 200%;
+}
+
+.bg-top {
+  background-position: top;
+}
+
+.bg-bottom {
+  background-position: bottom;
+}
+
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-12 {
@@ -2856,18 +2845,6 @@ html {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-20 {
-  padding: 5rem;
 }
 
 .py-8 {
@@ -2905,29 +2882,34 @@ html {
   padding-right: 2rem;
 }
 
-.px-\[0\.9rem\] {
-  padding-left: 0.9rem;
-  padding-right: 0.9rem;
+.px-\[0\.5rem\] {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-\[0\.5rem\] {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.px-\[0\.6rem\] {
+  padding-left: 0.6rem;
+  padding-right: 0.6rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.py-\[0\.6rem\] {
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
 }
 
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pt-10 {
@@ -2936,6 +2918,14 @@ html {
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -2954,21 +2944,6 @@ html {
   font-family: 'Lato';
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -2976,6 +2951,21 @@ html {
 
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -3005,8 +2995,16 @@ html {
   font-weight: 900;
 }
 
+.font-semibold {
+  font-weight: 600;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .text-white {
@@ -3022,6 +3020,16 @@ html {
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .blur-\[3px\] {
@@ -3042,8 +3050,33 @@ html {
   transition-duration: 150ms;
 }
 
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-150 {
   transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
+.duration-100 {
+  transition-duration: 100ms;
+}
+
+.content-\[\'\'\] {
+  --tw-content: '';
+  content: var(--tw-content);
 }
 
 /* Contact */
@@ -3086,7 +3119,13 @@ body {
 /* Partners - AEMM */
 
 .contact,  .about {
-  width: 50%;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .contact,  .about {
+    width: 50%;
+  }
 }
 
 .paragraph {
@@ -3108,14 +3147,23 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-slate-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
 .hover\:text-primary-green:hover {
   --tw-text-opacity: 1;
   color: hsl(137 98% 26% / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#4267B2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(66 103 178 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#00acee\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 172 238 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[color\:var\(--green\)\]:hover {
+  color: var(--green);
 }
 
 @media (min-width: 640px) {
@@ -3137,6 +3185,10 @@ body {
     display: flex;
   }
 
+  .md\:min-h-\[312px\] {
+    min-height: 312px;
+  }
+
   .md\:w-10\/12 {
     width: 83.333333%;
   }
@@ -3149,24 +3201,41 @@ body {
     flex-wrap: wrap;
   }
 
-  .md\:gap-4 {
-    gap: 1rem;
-  }
-
   .md\:gap-0 {
     gap: 0px;
   }
 
-  .md\:p-20 {
-    padding: 5rem;
+  .md\:border-b-2 {
+    border-bottom-width: 2px;
+  }
+
+  .md\:border-b-\[color\:var\(--green\)\] {
+    border-bottom-color: var(--green);
+  }
+
+  .md\:bg-\[length\:300\%_auto\] {
+    background-size: 300% auto;
+  }
+
+  .md\:bg-\[length\:200\%_auto\] {
+    background-size: 200% auto;
+  }
+
+  .md\:p-8 {
+    padding: 2rem;
   }
 
   .md\:p-14 {
     padding: 3.5rem;
   }
 
-  .md\:p-8 {
-    padding: 2rem;
+  .md\:p-4 {
+    padding: 1rem;
+  }
+
+  .md\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .md\:text-\[8vw\] {
@@ -3175,8 +3244,16 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
   .lg\:block {
     display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
   }
 
   .lg\:h-72 {
@@ -3191,12 +3268,16 @@ body {
     width: 66.666667%;
   }
 
-  .lg\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .lg\:w-\[97\%\] {
+    width: 97%;
   }
 
-  .lg\:justify-start {
-    justify-content: flex-start;
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
+  .lg\:p-8 {
+    padding: 2rem;
   }
 
   .lg\:py-12 {
@@ -3218,16 +3299,47 @@ body {
     height: 20rem;
   }
 
+  .xl\:w-\[80\%\] {
+    width: 80%;
+  }
+
   .xl\:basis-1\/3 {
     flex-basis: 33.333333%;
+  }
+
+  .xl\:basis-1\/2 {
+    flex-basis: 50%;
+  }
+
+  .xl\:flex-row {
+    flex-direction: row;
+  }
+
+  .xl\:gap-12 {
+    gap: 3rem;
+  }
+
+  .xl\:p-12 {
+    padding: 3rem;
   }
 
   .xl\:p-20 {
     padding: 5rem;
   }
 
-  .xl\:p-12 {
-    padding: 3rem;
+  .xl\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .xl\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .xl\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
