--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -7,7 +7,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-image: url(../img/media/brutv-bg.jpg);
+    background-image: url("../img/media/brutv-bg.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
